# CNS

./: .clang-tidy  .env  .gitignore  CMakeLists.txt  Makefile  pyproject.toml  setup.py  tasks.py
docs/: notes.md
exec/: CMakeLists.txt  inputs  main.cpp
src/: AmrCoreCNS.H  AmrCoreCNS.cpp  AmrCoreCNS_advance.cpp  AmrCoreCNS_evolve.cpp  AmrCoreCNS_thermo.cpp  AmrCoreCNS_timestep.cpp  CMakeLists.txt  CNS_index_macros.H  Kernels.H  Prob.H  Tagging.H  Thermo.H  cns.H  cns.cpp  deriv.H  initEB.cpp  pyro.H  pyro.cpp
tests/: CMakeLists.txt  README.md  test_advance_kernels.cpp  test_thermo_kernels.cpp
tools/: amrex-build.sh
